# infinitensor-exam-grading

exams/00_intro/: intro1.rs
learning-lm-rs/: Cargo.toml  build.rs  项目报告.md
learning-lm-rs/cuda-kernels/: gather.cu  matmul.cu  rms_norm.cu  rope.cu  sampling.cu  softmax.cu  swiglu.cu
learning-lm-rs/frontend/: package.json  pnpm-lock.yaml
learning-lm-rs/frontend/src/: App.tsx
learning-lm-rs/src/: chat.rs  config.rs  cuda_kernels.rs  lib.rs  model.rs  model_cpu.rs  model_cuda.rs  operators.rs  operators_cpu.rs  params.rs  sse.rs  tensor.rs
learning-lm-rs/src/operator_cuda/: mod.rs
learning-lm-rs/src/operators_cuda/: cuda_kernels.rs  mod.rs
learning-lm-rs/static/: package.json  pnpm-lock.yaml
rustlings/exercises/00_intro/: intro1.rs
rustlings/exercises/03_if/: if2.rs  if3.rs
rustlings/exercises/04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs
rustlings/exercises/05_vecs/: vecs2.rs
rustlings/exercises/06_move_semantics/: move_semantics3.rs  move_semantics5.rs
rustlings/exercises/07_structs/: structs1.rs  structs3.rs
rustlings/exercises/08_enums/: enums3.rs
rustlings/exercises/09_strings/: strings4.rs
rustlings/exercises/10_modules/: modules2.rs
rustlings/exercises/11_hashmaps/: hashmaps2.rs  hashmaps3.rs
rustlings/exercises/12_options/: options2.rs
rustlings/exercises/13_error_handling/: errors1.rs  errors3.rs  errors5.rs
rustlings/exercises/17_tests/: tests1.rs
rustlings/exercises/18_iterators/: iterators4.rs
rustlings/exercises/22_clippy/: clippy3.rs
rustlings/exercises/23_conversions/: from_into.rs
rustlings/exercises/quizzes/: quiz1.rs  quiz2.rs  quiz3.rs
xxx/00_intro/: intro1.rs
