[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/bin/web.rs"
required-features = ["web"]
[[bin]]
name = "chat"
path = "src/bin/chat.rs"
[[bin]]
name = "story"
path = "src/bin/story.rs"


[features]
web = ["dep:ntex", "dep:parking_lot"]
cuda = ["dep:cudarc", "dep:bindgen_cuda", "dep:candle-kernels"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
half = "2.4.1"
num-traits = "0.2.19"
bytemuck = "1.21.0"
parking_lot = { version = "0.12.3", optional = true }
ntex = { version = "2.11.0", features = ["compio"], optional = true }
cudarc = { version = "0.13.4", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false, optional = true }
candle-kernels = { version = "0.5.1", optional = true }

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }